Correct Header Alignment
Added min-width to SCSS to make the header work on smaller devices

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,7 +13,8 @@
 .title {
     margin: auto;
     text-align: center;
-    max-width: 20%;
+    width: 20%;
+    min-width: 200px;
     display: block;
     border: solid;
     border-color: $primaryColor;
